2002-07-14  Maciej Stachowiak  <mjs@apple.com>

        Assign getView() results to variable of appropriate type to work
	around apparent ObjC++ compiler bug. I wonder why other people
	aren't running into this (and why I haven't run into it before).

	* kwq/KWQButton.mm:
        (QButton::setText):
        (QButton::text):
        * kwq/KWQLineEdit.mm:
        (QLineEdit::setEchoMode):
        (QLineEdit::setText):
        (QLineEdit::text):
        (QLineEdit::setMaxLength):
        (QLineEdit::isReadOnly):
        (QLineEdit::setReadOnly):
        (QLineEdit::maxLength):
        (QLineEdit::selectAll):
        (QLineEdit::edited):
        (QLineEdit::setEdited):

2002-07-14  Darin Adler  <darin@apple.com>

        * WebCore-tests.exp: Tests needed access to QPoint, QString, and KURL symbols
	that were formerly exported for the benefit of WebKit.

        * kwq/KWQPixmap.mm: I needed to touch something since .exp files don't cause
	a rebuild, so I fixed a comment in here.

2002-07-14  Darin Adler  <darin@apple.com>

	Changes to WebCore that allow WebKit to work through Objective C without going
	straight to the KHTML headers. Also remove a bunch of unused stuff, especially
	in QPainter.

        * WebCore.exp: Export the new classes WebCoreCache and WebCoreJavaScript.
	Don't export any C++ symbols at all.

        * WebCore.pbproj/project.pbxproj: Remove KWQWMatrix.mm, add WebCoreCache.*
	and WebCoreJavaScript.*.

        * khtml/khtml_part.cpp: Put more unused code inside ifndef APPLE_CHANGES.
        * khtml/khtmlview.cpp: Put unused code inside #ifndef APPLE_CHANGES
        * khtml/khtmlview.h: Put unused virtual functions inside #ifndef APPLE_CHANGES.
        * khtml/misc/loader.cpp: (CachedImage::tiled_pixmap): Change this so it
	always returns pixmap(). Handling it at this level is better than changing
	all the callers for now.
        * khtml/rendering/render_box.cpp: (RenderBox::printBackground): Took out the